--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,9 +26,37 @@ spring:
         enanbled: true
         path: /h2-console
 
-    # Logging Config
-    logging:
-      level:
-        org.example: DEBUG
-        org.springframework.kafka: INFO
-        org.apache.kafka: WARN
+    # Kafka Config
+    kafka:
+      # Bootstrap Servers - Kafka broker addresses
+      bootstrap-servers: localhost:9092
+
+      # Producer configuration
+      producer:
+        key-serializer: org.apache.kafka.common.serialization.StringSerializer
+        value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+        properties:
+          spring.json.type.mapping: orderEventDTO:org.example.dto.OrderEventDTO
+
+      # Consumer configuration
+      consumer:
+        group-id: order-processing-group
+        auto-offset-reset: earliest
+        key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+        value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+        properties:
+          spring.json.trusted.packages: "*"
+          spring.json.type.mapping: orderEventDTO:org.example.dto.OrderEventDTO
+
+# App-specific config
+app:
+  kafka:
+    topic:
+      order-events: order-events-topic
+
+# Logging Config
+logging:
+  level:
+    org.example: DEBUG
+    org.springframework.kafka: INFO
+    org.apache.kafka: WARN
